Mon Oct 27 17:18:39 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* core.make: Use dashes instead of underscores in the library combo.
	Changed the library_combo variable name to libcombo.
	* DESIGN: Updated.

Mon Oct 27 15:46:56 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* library.make: Don't append the version to a static library (bug fix
	from Gregor Hoffleit <flight@thefly.mathi.uni-heidelberg.de>).
	* core.make: Added support for library_combo abbreviations.

Mon Oct 27 14:50:06 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* library.make: Make it recursive so you can build several libraries
	in the same directory.
	* common.make: Added GNUSTEP_INSTALLATION_DIR, the directory where all
	stuff gets installed; by defaults is setup to the local root. Changed
	all the variables accordingly. Removed definitions of INSTALL programs
	since they are in config.make.
	* GNUstep.sh.in: Add the LIBRARY_COMBO variable. Setup the PATH to
	also point to the tools directory.
	* rules.make: New implicit rules %.buildlib and %.installlib to support
	the recursive building of libraries.
	* tool.make: Install the tools in the proper directory.

Fri Oct 24 20:26:41 1997  Ovidiu Predescu <ovidiu@net-community.com>

	Added support for the OPENSTEP Foundation library in the testing
	related makefiles.
	* bundle.make: Replace LD with BUNDLE_LD.
	* common.make: Define a directory for the extensions under OPENSTEP.
	* core.make: Change the definition of NeXT_foundation_LIBRARY to
	NeXT_Foundation_LIBRARY.
	* rules.make (ALL_TEST_LIBRARY_LIBS): Include an additional variable
	AUXILIARY_LIBS.
	* target.make: Set HAVE_BUNDLES to yes only for NeXT runtime. Define
	BUNDLE_LD appropriate for all the targets.
	* test.make: Use BUNDLE_LD when building a bundle. Define the
	Foundation and the runtime used when running DejaGnu.

Tue Oct 21 17:31:27 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* application.make (app-resource-files): Check to see if the