@@ -1,5 +1,5 @@
 #
-#   Makefile.postamble
+#   GNUmakefile.postamble
 #
 #   Project specific makefile rules
 #
