@@ -109,4 +109,4 @@ AC_SUBST(ac_cv_library_combo)
 #--------------------------------------------------------------------
 # Produce the output files
 #--------------------------------------------------------------------
-AC_OUTPUT(config.h config.make openapp debugapp Makefile GNUstep.sh)
+AC_OUTPUT(config.h config.make openapp debugapp GNUmakefile GNUstep.sh)
